deploy/kube/default-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: default-ingress
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odbdesign-server-service
                port:
                  name: ods-svc-port
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: odbdesign-server-swaggerui-service
                port:
                  name: oss-svc-port
